...
                        child: Text(
                      "It took " +
                          (DateTime.now().millisecondsSinceEpoch - startTime)
                              .toString() +
                          " milliseconds",
                      style: TextStyle(fontSize: 30, color: Colors.red),
                      key: Key("VideoPlayerText"),
                    ))
                  ],
                ),
              );
            } else {
              startTime = DateTime.now().millisecondsSinceEpoch;
...
